--- a/functions/package.json
+++ b/functions/package.json
@@ -9,13 +9,15 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "10"
+    "node": "8"
   },
   "main": "index.js",
   "dependencies": {
+    "consolidate": "^0.15.1",
     "express": "^4.17.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "handlebars": "^4.7.6"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
